# bookstore

./: Dockerfile  Makefile  Procfile  README.md  db.sqlite3  docker-compose.yml  env.dev  heroku.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  heroku-deploy.yml  workflow-pr.yaml
bookStore/: asgi.py  settings.py  urls.py  wsgi.py
order/: urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/test_serializers/: test_order_viewset.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: admin.py  urls.py
product/migrations/: 0001_initial.py  0002_alter_product_active.py
product/models/: __init__.py  category.py  product.py
product/serializers/: __init__.py  category_serializer.py  product_serializer.py
product/tests/test_serializers/: test_category_serializer.py  test_product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: product_viewset.py
staticfiles/: staticfiles.json
